Started adding routing to the capstone project. Also fixed some layout issues with the 'Testimonials' section.

--- a/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/NavBar.css
+++ b/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/NavBar.css
@@ -30,18 +30,15 @@ nav menu {
 
 nav menu li {
     padding-left: 1em;
-}
-
-nav a {
     color: var(--secondary-black);
     text-decoration: none;
 }
 
-nav a:hover {
+nav li:hover {
     color: var(--secondary-pink);
 }
 
-nav a:active {
+nav li:active {
     color: var(--primary-yellow);
 }
 
