--- a/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/Testimonials.css
+++ b/Little Lemon Reserve-a-Table (Meta Front-End Developer Capstone)/little-lemon-reserve-a-table/src/Components/Testimonials.css
@@ -3,7 +3,6 @@
     grid-template-rows: auto auto;
     grid-template-columns: repeat(4, 1fr);
     background-color: #495e57;
-    column-gap: 1em;
     row-gap: 2em;
     justify-content: center;
     width: 50em;
